--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "animate.css": "^4.1.1",
-    "node-sass": "^4.14.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-scripts": "4.0.3",
     "react-smooth": "^2.0.0",
+    "sass": "^1.38.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
